# data-processing-pipeline

./: .gitignore  Dockerfile  Makefile  README.md  compose.yaml  go.mod  go.sum
cmd/dataserver/: dataserver.go
cmd/producer/: producer.go
cmd/publisher/: publisher.go
cmd/uploader/: uploader.go
datasets/: cleaned_apartments.csv  processed_cleaned_apartments.csv  test.csv  train.csv  val.csv
internal/broker/: broker.go  broker_config.go  config.go
internal/database/: database.go  database_config.go
internal/dataserver/api/: api_response_headers.go  processed_apartments.go  raw_apartments.go
internal/dataserver/config/: config.go  config_broker.go  config_const.go  config_data.go  config_db.go  config_site.go  options.go
internal/dataserver/entity/: db_conn.go  processed_apartment.go  raw_apartment.go
internal/entity/: processed_apartment.go  raw_apartment.go
internal/producer/: payload.go  row.go  run.go
libs/transformation/: pyproject.toml
models/: preprocessor.joblib
notebooks/: clean_dataset.ipynb  explore_processing.ipynb  explore_transformation.ipynb  model_showcase.ipynb  test_processing.ipynb  train_test_split.ipynb
pkg/csv/: csv.go
processor/: Makefile  pyproject.toml
processor/src/processor/: config.py  main.py  messaging.py  transformation.py
scripts/: cmd.sh
services/processor/: Dockerfile  pyproject.toml
services/processor/src/processor/: config.py  main.py  processor.py  transform.py  transformation.py
services/trainer/: Dockerfile  pyproject.toml
services/trainer/src/trainer/: config.py  main.py
(+41 files in other folders)
