[project]
name = "processor"
version = "0.1.0"
description = ""
authors = [{ name = "Le-BlitzZz" }]
license = { text = "MIT" }
requires-python = ">=3.9,<4.0"
dependencies = ["pandas (>=2.2.3,<3.0.0)", "aio-pika (>=9.5.5,<10.0.0)"]

[project.scripts]
processor = "processor.main:main"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
packages = [{ include = "processor", from = "src" }]
