[tool.poetry]
name = "trainer"
version = "0.1.0"
description = ""
authors = ["Le-BlitzZz"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
pandas = ">=2.2.3,<3.0.0"
scikit-learn = "^1.6.1"
transformation = { path = "../../libs/transformation", develop = true }
requests = "^2.32.3"

[tool.poetry.scripts]
trainer = "trainer.main:main"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
